<resources>
    <string name="app_name">StudisApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string-array name="names">
        <item>Events</item>
        <item>Angebote</item>
        <item>Jobangebote</item>
        <item>Nachhilfe/Lerngruppen</item>
        <item>Wohnungen</item>
        <item>Sonstiges</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for post menu -->
    <string name="deletePost">Löschen</string>
    <string name="editPost">Post bearbeiten</string>
    <string name="reportPost">Melden</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="timetable">Stundenplan</string>
    <string name="tasks">Aufgaben</string>
    <string name="news">News</string>
    <string name="universityEvents">Veranstaltungen</string>
    <string name="events">Events</string>
    <string name="discounts">Angebote</string>
    <string name="others">Sonstiges</string>
    <string name="jobs">Jobangebote</string>
    <string name="tutoring">Nachhilfe/Lerngruppen</string>
    <string name="apartments">Wohnungen</string>
    <string name="timeline">Timeline</string>
    <string name="logout">Logout</string>
    <string name="profile">Profil</string>
    <string name="editProfile">Profil bearbeiten</string>
    <string name="settings">Einstellungen</string>

    <!--used as settings -->
    <string name="german">Deutsch</string>
    <string name="english">Englisch</string>
    <string name="select_language">Sprache auswählen</string>
    <string name="appearance">Erscheinungsbild</string>
    <string name="toggle_darkmode">Darkmode</string>

    <!--used as templates for downloading htmlpages in universityfragments-->

    <string name="url_fh_website">https://www.hof-university.de</string>
    <string name="url_timetable">https://www.hof-university.de/studierende/info-service/stundenplaene/?type=1421771406&amp;id=79&amp;tx_stundenplan[controller]=Ajax&amp;tx_stundenplan_stundenplan[studiengang]=%s&amp;tx_stundenplan_stundenplan[semester]=%s</string>
    <string name="url_news">https://www.hof-university.de/ueber-uns/aktuelles/news.html</string>
    <string name="url_modulbook_all">https://www.hof-university.de/studierende/info-service/modulhandbuecher?type=1421771407&amp;id=167&amp;controller=Ajax&amp;tx_modulhandbuch_modulhandbuch[cl]=%s&amp;tx_modulhandbuch_modulhandbuch[ye]=%s&amp;tx_modulhandbuch_modulhandbuch[se]=%s</string>
    <string name="url_person">https://www.hof-university.de/ueber-uns/personen.html</string>
    <string name="url_maps_template">https://www.bing.com/maps/default.aspx?lvl=10&amp;rtp=pos.%s_%s&amp;style=a</string>
    <string name="url_timetableChanges_template">https://www.hof-university.de/index.php?type=1421771406&amp;id=166&amp;tx_stundenplan_stundenplan[controller]=Ajax&amp;tx_stundenplan_stundenplan[action]=loadAenderungen&amp;tx_stundenplan_stundenplan[studiengang]=%s&amp;tx_stundenplan_stundenplan[semester]=%s&amp;tx_stundenplan_stundenplan[datum]=%s&amp;1591119624290</string>
    <string name="url_events">https://www.hof-university.de/ueber-uns/aktuelles/veranstaltungen.html</string>
    <string name="url_meals">https://www.studentenwerk-oberfranken.de/essen/speiseplaene/hof/%s.html</string>

    <string name="person_not_found">Zu Ihrer Suche wurde kein Ergebnis gefunden. Benutzen Sie weitere Filter oder die Freitextsuche.</string>
    <string name="with">mit</string>
    <string name="shedule_changed_time">"Beginn um "</string>
    <string name="shedule_changed_canceld">Fällt aus</string>
    <string name="downloading_information">Erforderliche Daten werden heruntergeladen…</string>

    <string name="time">Uhrzeit</string>
    <string name="date">Datum</string>
    <string name="place">Ort</string>

    <string name="order_by">Sortiert nach</string>
    <string name="title">Titel</string>
    <string name="deadline">Abgabetermin</string>
    <string name="invert">umdrehen</string>
    <string name="taskDeleted">Aufgabe %s gelöscht.</string>
    <string name="undo">Rückgängig</string>
    <string name="newTask">Füge eine neue Aufgabe hinzu</string>
    <string name="desription">Beschreibung</string>
    <string name="opt">Optional</string>
    <string name="needed">Erforderlich</string>
    <string name="addField">Füge Felder hinzu/Entferne Felder</string>
    <string name="finished">Fertig</string>
    <string name="warning_no_title">Keinen Titel angegeben!</string>
    <string name="warning_message2">Bitte gebe einen Titel an, damit man die Aufgaben anhand desssen unterscheiden kann.</string>
    <string name="warning_ok">OK</string>
    <string name="warning_cancle_add_task">Aufgabenentwurf verwerfen?</string>
    <string name="warning_message3">Vorsicht! Wenn du jetzt zum Stundenplan zurückkehrst, geht die Aufgabe mitsamt ihrer Details verloren!</string>
    <string name="warning_backToShedule">Zurück zum Stundenplan</string>
    <string name="warning_cancle">Abbrechen</string>
    <string name="goToCourse">Zum Kurs</string>
    <string name="createUniversityTask">Erstelle eine neue Aufgabe!</string>
    <string name="save">Speichern</string>
    <string name="meals">Speiseplan</string>
    <string name="mainmeals">Hauptspeisen</string>
    <string name="extras">Beilagen</string>
    <string name="deserts">Nachspeise</string>
    <string name="snacks_salads">Snacks / Salate</string>


    <!--profile-->
    <string name="username">Benutzername</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="registration">Joining StudisApp</string>
    <string name="login">Login</string>
    <string name="notRegistered">Noch nicht registriert? Dann klick hier!</string>
    <string name="placeholderText">Konnte nicht geladen werden</string>

    <!--Strings used for activity_edit_profile-->
    <string name="hintUsername">Udo42</string>
    <string name="degreeCourse">Studiengang</string>
    <string name="hintDegreeCourse">Medieninformatik</string>
    <string name="postCode">Postleitzahl</string>
    <string name="hintPostCode">Geben Sie hier Ihre Postleitzahl ein.</string>
    <string name="semester">Semester</string>
    <string name="hintSemester">4</string>
    <string name="university">Universität</string>
    <string name="hintUniversity">Geben Sie hier Ihre Hochschule ein.</string>
    <string name="postalCodeFalse">Geben Sie eine korrekte Postleitzahl ein</string>


    <!--Strings used for activity_post-->
    <string name="post">Posten</string>
    <string name="hintPostText">Geben sie hier ihren Text ein...</string>

    <!--Strings used for cardviews-->
    <string name="tasktitle">TASKTITLE</string>
    <string name="courseName">Kursname</string>
    <string name="courseTime">Kurs\Zeit</string>
    <string name="professor">Professor</string>
    <string name="roomKind">Room | Kind</string>
    <string name="testText">das hier soll ein ganz langer text werden um einen zeilenumbruch hervorzurufen</string>
    <string name="textView">TextView</string>
    <string name="room">Raum</string>

    <string name="language">Sprache</string>
    <string name="likes">\'Gefällt Mir\' Angaben</string>
    <string name="alreadyRegistered">Bereits registriert? Klicken Sie hier um sich anzumelden.</string>
    <string name="cancel">Abbrechen</string>
    <string name="edit">Bearbeiten</string>
    <string name="reportPostMessage">Post wurde gemeldet!</string>
    <string name="deleted">Gelöscht!</string>
    <string name="confirm">Bestätigen</string>
    <string name="warning">Warnung</string>
    <string name="selectCourseOfStudyFirst">Sie müssen zuerst im Profil einen Studiengang und ein Semester wählen!</string>
    <string name="pleaseWait">Bitte warten Sie...</string>
    <string name="fillFields">Alle Felder müssen ausgefüllt sein!</string>
    <string name="minPassword">Das Passwort muss mindestens 6 Zeichen besitzen!</string>
    <string name="wrongPwOrMail">Sie können sich leider nicht mit dieser Email oder Passwort registrieren!</string>
    <string name="failedLogin">Anmeldung fehlgeschlagen!</string>
    <string name="changesSaved">Änderungen wurden übernommen</string>
    <string name="upploadSuccess">Upload erfolgreich</string>
    <string name="willBeUploaded">Wird hochgeladen.</string>
    <string name="uploadFailed">Upload fehlgeschlagen!</string>
    <string name="noImageSelected">Kein Bild ausgewählt!</string>
    <string name="somethingWentWrong">Etwas ist schief gelaufen.</string>
    <string name="englishLang">Die App Sprache wurde auf Englisch gestellt.</string>
    <string name="germanLang">Die App Sprache wurde auf Deutsch gestellt.</string>
    <string name="themeDark">Der Dark Mode wurde aktiviert.</string>
    <string name="themeBright">Der Light Mode wurde aktiviert.</string>
    <string name="createPost">Post wird erstellt.</string>
    <string name="notGiven">nicht angegeben</string>
    <!-- Preference Titles -->

</resources>