<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_lifestyle_timeline"
        android:icon="@drawable/ic_fire"
        android:title="@string/timeline" />
    <item
        android:id="@+id/menu_lifestyle_events"
        android:icon="@drawable/ic_events"
        android:title="@string/events" />
    <item
        android:id="@+id/menu_lifestyle_discounts"
        android:icon="@drawable/ic_discount"
        android:title="@string/discounts" />

    <item
        android:id="@+id/menu_lifestyle_jobs"
        android:icon="@drawable/ic_find_jobs"
        android:title="@string/jobs" />
    <item
        android:id="@+id/menu_lifestyle_tutoring"
        android:icon="@drawable/ic_learn"
        android:title="@string/tutoring" />
    <item
        android:id="@+id/menu_lifestyle_apartments"
        android:icon="@drawable/ic_home"
        android:title="@string/apartments" />
    <item
        android:id="@+id/menu_lifestyle_others"
        android:icon="@drawable/ic_speech"
        android:title="@string/others" />
</menu>