<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_university_timetable"
        android:icon="@drawable/icon_timetable"
        android:title="@string/timetable" />
    <item
        android:id="@+id/menu_university_tasks"
        android:icon="@drawable/icon_tasks"
        android:title="@string/tasks" />
    <item
        android:id="@+id/menu_university_news"
        android:icon="@drawable/icon_news"
        android:title="@string/news" />
    <item
        android:id="@+id/menu_university_events"
        android:icon="@drawable/icon_events"
        android:title="@string/universityEvents" />
    <item
        android:id="@+id/menu_university_meals"
        android:title="@string/meals" />
</menu>