<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory app:title="@string/language">


        <ListPreference
            app:defaultValue="german"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="language"
            app:title="@string/select_language"
            android:textColor="@color/text"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance">

        <SwitchPreferenceCompat
            app:key="darkmode"
            app:title="@string/toggle_darkmode"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>